Bug 237617 - Fix Windows debug build
Summary: Fix Windows debug build
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alex Christensen
URL:
Keywords: InRadar
: 230877 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-03-08 13:03 PST by Alex Christensen
Modified: 2023-01-04 17:44 PST (History)
5 users (show)

See Also:


Attachments
Patch (3.12 KB, patch)
2022-03-08 13:06 PST, Alex Christensen
ews-feeder: commit-queue-
Details | Formatted Diff | Diff
Patch (3.12 KB, patch)
2022-03-08 13:16 PST, Alex Christensen
ews-feeder: commit-queue-
Details | Formatted Diff | Diff
Patch (3.14 KB, patch)
2022-03-08 13:32 PST, Alex Christensen
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Christensen 2022-03-08 13:03:36 PST
Fix Windows debug build
Comment 1 Alex Christensen 2022-03-08 13:06:44 PST
Created attachment 454147 [details]
Patch
Comment 2 Alex Christensen 2022-03-08 13:16:19 PST
Created attachment 454148 [details]
Patch
Comment 3 Alex Christensen 2022-03-08 13:32:35 PST
Created attachment 454150 [details]
Patch
Comment 4 EWS 2022-03-08 15:19:53 PST
Committed r291016 (248190@main): <https://commits.webkit.org/248190@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 454150 [details].
Comment 5 Radar WebKit Bug Importer 2022-03-08 15:20:29 PST
<rdar://problem/89992900>
Comment 6 Fujii Hironori 2022-03-09 04:20:27 PST
This change broke WinCairo builds.
Filed: Bug 237647 – [WinCairo] SpatialNavigation.h(93): error C2365: 'WebCore::None': redefinition; previous definition was 'enumerator'
Comment 7 Fujii Hironori 2022-03-09 05:16:16 PST
*** Bug 230877 has been marked as a duplicate of this bug. ***