Fix Windows debug build https://bugs.webkit.org/show_bug.cgi?id=237617

Patch by Alex Christensen <achristensen@webkit.org> on 2022-03-08
Reviewed by Fujii Hironori.

Source/WebCore:

* loader/appcache/ApplicationCacheStorage.cpp:
(WebCore::parseHeader):

Source/WTF:

MSVC's linker is limited to generating 4GB libraries.
Currently, I'm seeing WebCore.lib be 3.9GB and some bots are failing to link debug builds.
More source unification reduces WebCore.lib's size to 3.3GB.

* Scripts/generate-unified-source-bundles.rb:


Canonical link: https://commits.webkit.org/248190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291016 268f45cc-cd09-0410-ab3c-d52691b4dbfc